--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  width: 100vw;
   /* max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -24,6 +25,17 @@ body {
 
 
 table {
-  border: 2px solid black;
-  
+  height: 300px;
+  width: 900px;
+  /* border: 1px dashed rgb(7, 95, 88); */
+  border-collapse: separate; 
+  border-spacing: 20px; 
 }
+
+/* tr {
+  background-color: aqua;
+} */
+#addRowBtn {
+  width: 675px;
+}
+
