--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,8 @@
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-} */
+  -moz-osx-font-smoothing: grayscale; */
+}
 
 a {
   font-weight: 500;
